@@ -1,3 +1,8 @@
+2016-10-19  Carl Hetherington  <cth@carlh.net>
+
+	* Fix various problems with 3D DCP creation
+	from 3D DCP and 3D-alernate-frame sources.
+
 2016-10-18  Carl Hetherington  <cth@carlh.net>
 
 	* Updated de_DE translation from Carsten Kurz.
